.helm/02-deployment-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name roove-backend
  namespace: aproove
  labels: &selector
    apcode.com.br/app: aproove
    apcode.com.br/module: backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *selector
  template:
    metadata:
      labels:
        <<: *selector
    spec:
      containers:
        - name: *name
          image: ghcr.io/andrepenteado/aproove/backend
          imagePullPolicy: Always
#          resources:
#            limits:
#              memory: 1G
#              cpu: 8000m
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /roove-backend/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /roove-backend/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
      imagePullSecrets:
        - name: github-secret
---
apiVersion: v1
kind: Service
metadata:
  name: roove-backend
  namespace: aproove
  labels: &selector
    apcode.com.br/app: aproove
    apcode.com.br/module: backend
    apcode.com.br/version: 1.0.0
    apcode.com.br/env: prod
spec:
  type: LoadBalancer
  ports:
    - name: roove-back
      port: 8080
      targetPort: 8080
  selector:
    <<: *selector
